--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -1,21 +1,40 @@
-name: Basic deploy
+name: Basic Deploy
 on:
-  push:
-    branches: [main]
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+    inputs:
+      stack_destroy:
+        type: boolean
+        default: false
+permissions:
+  contents: read
 jobs:
   EC2-Deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ github.ref_name }}
+      url: ${{ steps.deploy.outputs.vm_url }}
     steps:
       - id: deploy
+        name: Deploy
         uses: heralddsb/devops-streaming-demo@main
         with:
-         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-         aws_default_region: us-east-1
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID}}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_default_region: us-east-1
+          app_port: 3000
+          stack_destroy: true
+          tf_state_bucket_destroy: true
+      - if: ${{ steps.deploy.outputs.vm_url != '' }}
+        name: Print result created
+        run: |
+          echo "## VM Created! :rocket:" >> $GITHUB_STEP_SUMMARY
+          echo " ${{ steps.deploy.outputs.vm_url }}" >> $GITHUB_STEP_SUMMARY
+      - if: ${{ steps.deploy.outputs.vm_url == '' }}
+        name: Print result destroyed
+        run: >
+          echo "## VM Destroyed! :boom:" >> $GITHUB_STEP_SUMMARY
 
-        # Provide a secret called `DOT_ENV` to append environment variables to the .env file
-        # dot_env: ${{ secrets.DOT_ENV }}
-
-         app_port: 3000
-         stack_destroy: true
-         tf_state_bucket_destroy: true
+          echo "Buckets and whole infrastructure should be gone now!" >> $GITHUB_STEP_SUMMARY
