--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -18,8 +18,8 @@ jobs:
         name: Deploy
         uses: heralddsb/devops-streaming-demo@main
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_PRACTICE}}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PRACTICE}}
           aws_default_region: us-east-1
           app_port: 3000
           stack_destroy: true
