--- a/.github/workflows/display-env.yaml
+++ b/.github/workflows/display-env.yaml
@@ -11,6 +11,6 @@ jobs:
 
     steps:
       - name: Display Environment Variable
-        run: echo "My ACCESS KEY variable value is:"
+        run: echo "My ACCESS KEY variable value is: $MY_ENV_VARIABLE"
         env:
           MY_ENV_VARIABLE: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEVOPS_PRACTICE }}
