--- a/.github/workflows/display-env.yaml
+++ b/.github/workflows/display-env.yaml
@@ -4,13 +4,12 @@ on:
   push:
     branches:
       - main
-
 jobs:
   display-env-variable:
     runs-on: ubuntu-latest
     env:
-     MY_ENV_VARIABLE: ${{secrets.AWS_SECRET_ACCESS_KEY_ID_DEVOPS_PRACTICE}}
+     MY_ACCESS_ENV: ${{secrets.AWS_SECRET_ACCESS_KEY_DEVOPS_PRACTICE}}
     steps:
       - name: Display Environment Variable
-        run: echo "$MY_ENV_VARIABLE"
+        run: echo "$MY_ACCESS_ENV"
 
