With param. display-env.yaml

--- a/.github/workflows/display-env.yaml
+++ b/.github/workflows/display-env.yaml
@@ -11,5 +11,7 @@ jobs:
      MY_ACCESS_ENV: ${{env.PARAM_ENV}}
     steps:
       - name: Display Environment Variable
-        run: echo "Access key is ${{ secrets.AWS_ACCESS_KEY_ID }}"
+        run: |
+         echo "Access key is ${{ secrets.AWS_ACCESS_KEY_ID }}"
+         echo "Param is ${{ env.MY_ACCESS_ENV }}"
 
